# ganglia

./: .gitignore  README.md  ganglia_listener.py  ganglia_voice.py  pyproject.toml  requirements-listener.txt  requirements.txt
.github/workflows/: ci.yml
docs/: HARDWARE_TIERS.md
ganglia/: __init__.py  events.py  main.py
ganglia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
ganglia/audio/: __init__.py  listener.py  speaker.py  transcribe.py
ganglia/face/: __init__.py  ocean.py
ganglia/integrations/: __init__.py  clawdbot.py  response_handler.py
ganglia/tts/: __init__.py  base.py  piper.py
ganglia/video/: __init__.py  capture.py  describe.py
