[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ganglia"
version = "0.1.0"
description = "Local sensory preprocessing for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Kai", email = "kai@clawd.bot"},
    {name = "Jason Ernst", email = "jason@jasonernst.com"},
]
keywords = ["ai", "agents", "audio", "vision", "whisper", "yolo", "sensing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
ganglia = "ganglia.main:main"

[project.urls]
Homepage = "https://github.com/compscidr/ganglia"
Repository = "https://github.com/compscidr/ganglia"
Issues = "https://github.com/compscidr/ganglia/issues"

[tool.setuptools.packages.find]
include = ["ganglia*"]
